// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processWeek 골든 스냅샷 > 시상식 주간(50주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "winter",
      "kpopNews": [
        {
          "detail": "연말 무대 완성도와 업계 평판이 직접적인 변수로 작동한다.",
          "headline": "MMA/MAMA/골든디스크 시상식 일정 확정",
          "id": "news-w50-0",
          "type": "event",
          "week": 50,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "retro",
        "hotGenre": "dancePop",
        "hotMood": "refreshing",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [
        {
          "activeWeeks": 0,
          "agency": "빅오션 뮤직",
          "debutYear": 1,
          "duration": 2,
          "fandom": 5382,
          "gender": "female",
          "global": 2202,
          "id": "event-rival-mega_rookie-w50",
          "industry": 56,
          "intensity": 81,
          "name": "에클라",
          "public": 65,
          "stats": {
            "dance": 77,
            "marketing": 75,
            "visual": 74,
            "vocal": 75,
          },
          "strengths": [
            "완성형 데뷔",
            "대형 마케팅",
            "초기 화제성",
          ],
          "triggerType": "mega_rookie",
          "type": "traditional",
          "weaknesses": [
            "초기 버블 이후 피로도",
          ],
        },
      ],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 2,
      "industry": 26,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 50,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 50,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "awardHistory": [
        {
          "category": "rookie",
          "showId": "mma",
          "showName": "MMA",
          "week": 50,
          "year": 1,
        },
        {
          "category": "popularity",
          "showId": "mma",
          "showName": "MMA",
          "week": 50,
          "year": 1,
        },
        {
          "category": "rookie",
          "showId": "mama",
          "showName": "MAMA",
          "week": 50,
          "year": 1,
        },
        {
          "category": "popularity",
          "showId": "mama",
          "showName": "MAMA",
          "week": 50,
          "year": 1,
        },
        {
          "category": "rookie",
          "showId": "goldenDisk",
          "showName": "골든디스크",
          "week": 50,
          "year": 1,
        },
        {
          "category": "popularity",
          "showId": "goldenDisk",
          "showName": "골든디스크",
          "week": 50,
          "year": 1,
        },
      ],
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "winter",
      "currentWeek": 51,
      "currentYear": 1,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "investorComplianceCount": 0,
      "investorConditionProgress": {
        "summit-quarterly": {
          "firstFailedWeek": 50,
          "penaltyApplied": false,
        },
      },
      "investorConditions": [
        {
          "deadlineWeeks": 13,
          "description": "분기마다 수익 보고서 제출 및 흑자 전환 경향 증명",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": "분기 보고 흑자 전환 추세",
        },
        {
          "deadlineWeeks": 104,
          "description": "2년 안에 초기 투자금 회수 수준의 누적 성과 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": "2년 내 투자금 회수",
        },
      ],
      "investorPenaltyActive": true,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "milestonesAchieved": [],
      "notifications": [
        {
          "id": "noti-w50-0",
          "message": "🏆 MMA 신인상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-1",
          "message": "🏆 MMA 인기상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-2",
          "message": "🏆 MAMA 신인상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-3",
          "message": "🏆 MAMA 인기상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-4",
          "message": "🏆 골든디스크 신인상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-5",
          "message": "🏆 골든디스크 인기상 수상!",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-6",
          "message": "이벤트 경쟁 그룹 등장: 에클라",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-7",
          "message": "투자사 조건 미달: 분기마다 수익 보고서 제출 및 흑자 전환 경향 증명 — 4주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
      ],
      "saveRevision": 0,
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "투자사",
          "id": "emergency-investor",
          "options": [
            {
              "activityOverride": "entertainment",
              "description": "상업 활동을 늘리고 투자사 지표를 우선한다.",
              "effects": {
                "fandomDisappointment": 5,
                "money": 20000000,
                "satisfaction": -4,
                "stress": 5,
              },
              "id": "comply",
              "label": "요구 수용",
              "tradeoff": "단기 지원금을 받지만 팬 실망과 멤버 피로가 누적된다.",
            },
            {
              "description": "기한 연장과 평가 기준 완화를 요청한다.",
              "effects": {
                "industry": -2,
                "money": -10000000,
                "satisfaction": 2,
              },
              "id": "negotiate",
              "label": "조건 재협상",
              "tradeoff": "유예 기간이 2주 늘어나지만 자문 비용과 업계 마찰이 생긴다.",
            },
            {
              "description": "지원 축소를 감수하고 팀의 방향성을 지킨다.",
              "effects": {
                "fandomLoyalty": 3,
                "industry": -3,
                "money": -15000000,
                "satisfaction": 5,
              },
              "id": "defy",
              "label": "자체 방침 고수",
              "tradeoff": "멤버와 팬은 안도하지만 현금과 업계 관계가 악화된다.",
            },
          ],
          "summary": "투자 조건 미달 또는 누적 압박으로 투자사가 운영 방침 변경을 요구한다.",
          "title": "투자사 경영 개입",
          "trigger": {
            "description": "투자사 압박 활성",
            "entityIds": [],
            "kind": "investor",
            "severity": "critical",
          },
        },
      ],
      "weeklyFlow": {
        "activeEventIndex": 0,
        "eventQueueIds": [],
        "report": null,
        "resolutionId": null,
        "selectedDecisionIds": {},
        "state": "planning_ready",
      },
    },
    "staff": {
      "staff": [
        {
          "ability": 60,
          "id": "staff-manager",
          "name": "김매니저",
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 76,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 76,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": [
      {
        "showId": "mma",
        "showName": "MMA",
        "winners": [
          {
            "category": "rookie",
            "isPlayer": true,
            "score": 11.97345289398916,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
          {
            "category": "popularity",
            "isPlayer": true,
            "score": 11.724771401816978,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
        ],
      },
      {
        "showId": "mama",
        "showName": "MAMA",
        "winners": [
          {
            "category": "rookie",
            "isPlayer": true,
            "score": 14.801997069856151,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
          {
            "category": "popularity",
            "isPlayer": true,
            "score": 14.997508455188944,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
        ],
      },
      {
        "showId": "goldenDisk",
        "showName": "골든디스크",
        "winners": [
          {
            "category": "rookie",
            "isPlayer": true,
            "score": 14.585894481660798,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
          {
            "category": "popularity",
            "isPlayer": true,
            "score": 11.636110519440845,
            "winnerId": "player",
            "winnerName": "FIXTURE",
          },
        ],
      },
    ],
    "competitorComebacks": [],
    "conflicts": [],
    "deltas": [
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w50-0",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w50-1",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 스트레스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w50-2",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 비주얼",
        },
      },
      {
        "after": 53.072,
        "before": 50,
        "day": 3,
        "id": "y1-w50-3",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 보컬",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w50-4",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 댄스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w50-5",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 매력",
        },
      },
      {
        "after": 81.92,
        "before": 80,
        "day": 3,
        "id": "y1-w50-6",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 체력",
        },
      },
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w50-7",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w50-8",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 스트레스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w50-9",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 비주얼",
        },
      },
      {
        "after": 53.072,
        "before": 50,
        "day": 3,
        "id": "y1-w50-10",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 보컬",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w50-11",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 댄스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w50-12",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 매력",
        },
      },
      {
        "after": 81.92,
        "before": 80,
        "day": 3,
        "id": "y1-w50-13",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 체력",
        },
      },
      {
        "after": 22,
        "before": 20,
        "day": 4,
        "id": "y1-w50-14",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t2",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 케미",
        },
      },
      {
        "after": 22,
        "before": 20,
        "day": 4,
        "id": "y1-w50-15",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t1",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 케미",
        },
      },
      {
        "after": 76,
        "before": 70,
        "day": 5,
        "id": "y1-w50-16",
        "severity": "notice",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 만족도",
        },
      },
      {
        "after": 76,
        "before": 70,
        "day": 5,
        "id": "y1-w50-17",
        "severity": "notice",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 만족도",
        },
      },
      {
        "after": 999053846,
        "before": 1000000000,
        "day": 6,
        "id": "y1-w50-18",
        "severity": "info",
        "source": {
          "id": "weekly-finance",
          "kind": "finance",
          "label": "주간 결산",
        },
        "target": {
          "field": "money",
          "id": null,
          "kind": "finance",
          "label": "자금",
        },
      },
      {
        "after": 8,
        "before": 10,
        "day": 6,
        "id": "y1-w50-19",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "public",
          "id": null,
          "kind": "fandom",
          "label": "대중 인지도",
        },
      },
      {
        "after": 26,
        "before": 20,
        "day": 6,
        "id": "y1-w50-20",
        "severity": "notice",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "industry",
          "id": null,
          "kind": "fandom",
          "label": "업계 평판",
        },
      },
      {
        "after": 51,
        "before": 50,
        "day": 7,
        "id": "y1-w50-21",
        "severity": "info",
        "source": {
          "id": "advance-week",
          "kind": "calendar",
          "label": "주간 진행",
        },
        "target": {
          "field": "currentWeek",
          "id": null,
          "kind": "game",
          "label": "현재 주차",
        },
      },
    ],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "연말 무대 완성도와 업계 평판이 직접적인 변수로 작동한다.",
        "headline": "MMA/MAMA/골든디스크 시상식 일정 확정",
        "id": "news-w50-0",
        "type": "event",
        "week": 50,
      },
    ],
    "promotionResults": [],
    "season": "winter",
    "statChanges": [
      "트레이니-t1 컨디션: 80 → 79.46 (주간 훈련)",
      "트레이니-t1 스트레스: 10 → 11.8 (주간 훈련)",
      "트레이니-t1 비주얼: 50 → 51.92 (주간 훈련)",
      "트레이니-t1 보컬: 50 → 53.072 (주간 훈련)",
      "트레이니-t1 댄스: 50 → 51.92 (주간 훈련)",
      "트레이니-t1 매력: 50 → 51.92 (주간 훈련)",
      "트레이니-t1 체력: 80 → 81.92 (주간 훈련)",
      "트레이니-t2 컨디션: 80 → 79.46 (주간 훈련)",
      "트레이니-t2 스트레스: 10 → 11.8 (주간 훈련)",
      "트레이니-t2 비주얼: 50 → 51.92 (주간 훈련)",
      "트레이니-t2 보컬: 50 → 53.072 (주간 훈련)",
      "트레이니-t2 댄스: 50 → 51.92 (주간 훈련)",
      "트레이니-t2 매력: 50 → 51.92 (주간 훈련)",
      "트레이니-t2 체력: 80 → 81.92 (주간 훈련)",
      "트레이니-t1 만족도: 70 → 76 (멤버 만족도)",
      "트레이니-t2 만족도: 70 → 76 (멤버 만족도)",
    ],
    "warnings": [
      "🏆 MMA 신인상 수상!",
      "🏆 MMA 인기상 수상!",
      "🏆 MAMA 신인상 수상!",
      "🏆 MAMA 인기상 수상!",
      "🏆 골든디스크 신인상 수상!",
      "🏆 골든디스크 인기상 수상!",
      "이벤트 경쟁 그룹 등장: 에클라",
      "투자사 조건 미달: 분기마다 수익 보고서 제출 및 흑자 전환 경향 증명 — 4주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
    ],
    "week": 50,
  },
}
`;

exports[`processWeek 골든 스냅샷 > 일반 훈련 주간(5주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "spring",
      "kpopNews": [
        {
          "detail": "청량·Y2K 계열이 초봄 차트에서 강한 흐름을 보이고 있다.",
          "headline": "봄 시즌 청량 콘셉트 수요 급증",
          "id": "news-w5-0",
          "type": "trend",
          "week": 5,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "retro",
        "hotGenre": "dancePop",
        "hotMood": "refreshing",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 2,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 5,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 5,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "awardHistory": [],
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "spring",
      "currentWeek": 6,
      "currentYear": 1,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "investorComplianceCount": 0,
      "investorConditionProgress": {},
      "investorConditions": [
        {
          "deadlineWeeks": 13,
          "description": "분기마다 수익 보고서 제출 및 흑자 전환 경향 증명",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": "분기 보고 흑자 전환 추세",
        },
        {
          "deadlineWeeks": 104,
          "description": "2년 안에 초기 투자금 회수 수준의 누적 성과 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": "2년 내 투자금 회수",
        },
      ],
      "investorPenaltyActive": false,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "milestonesAchieved": [],
      "notifications": [],
      "saveRevision": 0,
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [],
      "weeklyFlow": {
        "activeEventIndex": 0,
        "eventQueueIds": [],
        "report": null,
        "resolutionId": null,
        "selectedDecisionIds": {},
        "state": "planning_ready",
      },
    },
    "staff": {
      "staff": [
        {
          "ability": 60,
          "id": "staff-manager",
          "name": "김매니저",
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": null,
    "competitorComebacks": [],
    "conflicts": [],
    "deltas": [
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w5-0",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w5-1",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 스트레스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w5-2",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 비주얼",
        },
      },
      {
        "after": 53.072,
        "before": 50,
        "day": 3,
        "id": "y1-w5-3",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 보컬",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w5-4",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 댄스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w5-5",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 매력",
        },
      },
      {
        "after": 81.92,
        "before": 80,
        "day": 3,
        "id": "y1-w5-6",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 체력",
        },
      },
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w5-7",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w5-8",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 스트레스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w5-9",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 비주얼",
        },
      },
      {
        "after": 53.072,
        "before": 50,
        "day": 3,
        "id": "y1-w5-10",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 보컬",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w5-11",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 댄스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w5-12",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 매력",
        },
      },
      {
        "after": 81.92,
        "before": 80,
        "day": 3,
        "id": "y1-w5-13",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 체력",
        },
      },
      {
        "after": 22,
        "before": 20,
        "day": 4,
        "id": "y1-w5-14",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t2",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 케미",
        },
      },
      {
        "after": 22,
        "before": 20,
        "day": 4,
        "id": "y1-w5-15",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t1",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 케미",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w5-16",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 만족도",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w5-17",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 만족도",
        },
      },
      {
        "after": 999053846,
        "before": 1000000000,
        "day": 6,
        "id": "y1-w5-18",
        "severity": "info",
        "source": {
          "id": "weekly-finance",
          "kind": "finance",
          "label": "주간 결산",
        },
        "target": {
          "field": "money",
          "id": null,
          "kind": "finance",
          "label": "자금",
        },
      },
      {
        "after": 8,
        "before": 10,
        "day": 6,
        "id": "y1-w5-19",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "public",
          "id": null,
          "kind": "fandom",
          "label": "대중 인지도",
        },
      },
      {
        "after": 6,
        "before": 5,
        "day": 7,
        "id": "y1-w5-20",
        "severity": "info",
        "source": {
          "id": "advance-week",
          "kind": "calendar",
          "label": "주간 진행",
        },
        "target": {
          "field": "currentWeek",
          "id": null,
          "kind": "game",
          "label": "현재 주차",
        },
      },
    ],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "청량·Y2K 계열이 초봄 차트에서 강한 흐름을 보이고 있다.",
        "headline": "봄 시즌 청량 콘셉트 수요 급증",
        "id": "news-w5-0",
        "type": "trend",
        "week": 5,
      },
    ],
    "promotionResults": [],
    "season": "spring",
    "statChanges": [
      "트레이니-t1 컨디션: 80 → 79.46 (주간 훈련)",
      "트레이니-t1 스트레스: 10 → 11.8 (주간 훈련)",
      "트레이니-t1 비주얼: 50 → 51.92 (주간 훈련)",
      "트레이니-t1 보컬: 50 → 53.072 (주간 훈련)",
      "트레이니-t1 댄스: 50 → 51.92 (주간 훈련)",
      "트레이니-t1 매력: 50 → 51.92 (주간 훈련)",
      "트레이니-t1 체력: 80 → 81.92 (주간 훈련)",
      "트레이니-t2 컨디션: 80 → 79.46 (주간 훈련)",
      "트레이니-t2 스트레스: 10 → 11.8 (주간 훈련)",
      "트레이니-t2 비주얼: 50 → 51.92 (주간 훈련)",
      "트레이니-t2 보컬: 50 → 53.072 (주간 훈련)",
      "트레이니-t2 댄스: 50 → 51.92 (주간 훈련)",
      "트레이니-t2 매력: 50 → 51.92 (주간 훈련)",
      "트레이니-t2 체력: 80 → 81.92 (주간 훈련)",
      "트레이니-t1 만족도: 70 → 69 (멤버 만족도)",
      "트레이니-t2 만족도: 70 → 69 (멤버 만족도)",
    ],
    "warnings": [],
    "week": 5,
  },
}
`;

exports[`processWeek 골든 스냅샷 > 투자사 마감 주간(VC 13주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "summer",
      "kpopNews": [
        {
          "detail": "방송과 숏폼 노출 경쟁이 예상보다 빨라질 것으로 보인다.",
          "headline": "대형 기획사 루키 그룹, 다음 달 데뷔 예고",
          "id": "news-w13-0",
          "type": "competitor",
          "week": 13,
        },
      ],
      "marketTrend": {
        "coldGenre": "ballad",
        "coldMood": "dreamy",
        "hotGenre": "edm",
        "hotMood": "powerful",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 2,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 13,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 13,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "awardHistory": [],
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "summer",
      "currentWeek": 14,
      "currentYear": 1,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "investorComplianceCount": 0,
      "investorConditionProgress": {
        "summit-quarterly": {
          "firstFailedWeek": 13,
          "penaltyApplied": false,
        },
      },
      "investorConditions": [
        {
          "deadlineWeeks": 13,
          "description": "분기마다 수익 보고서 제출 및 흑자 전환 경향 증명",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": "분기 보고 흑자 전환 추세",
        },
        {
          "deadlineWeeks": 104,
          "description": "2년 안에 초기 투자금 회수 수준의 누적 성과 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": "2년 내 투자금 회수",
        },
      ],
      "investorPenaltyActive": true,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "milestonesAchieved": [],
      "notifications": [
        {
          "id": "noti-w13-0",
          "message": "투자사 조건 미달: 분기마다 수익 보고서 제출 및 흑자 전환 경향 증명 — 4주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
          "title": "주간 알림",
          "type": "warning",
          "week": 13,
        },
      ],
      "saveRevision": 0,
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "투자사",
          "id": "emergency-investor",
          "options": [
            {
              "activityOverride": "entertainment",
              "description": "상업 활동을 늘리고 투자사 지표를 우선한다.",
              "effects": {
                "fandomDisappointment": 5,
                "money": 20000000,
                "satisfaction": -4,
                "stress": 5,
              },
              "id": "comply",
              "label": "요구 수용",
              "tradeoff": "단기 지원금을 받지만 팬 실망과 멤버 피로가 누적된다.",
            },
            {
              "description": "기한 연장과 평가 기준 완화를 요청한다.",
              "effects": {
                "industry": -2,
                "money": -10000000,
                "satisfaction": 2,
              },
              "id": "negotiate",
              "label": "조건 재협상",
              "tradeoff": "유예 기간이 2주 늘어나지만 자문 비용과 업계 마찰이 생긴다.",
            },
            {
              "description": "지원 축소를 감수하고 팀의 방향성을 지킨다.",
              "effects": {
                "fandomLoyalty": 3,
                "industry": -3,
                "money": -15000000,
                "satisfaction": 5,
              },
              "id": "defy",
              "label": "자체 방침 고수",
              "tradeoff": "멤버와 팬은 안도하지만 현금과 업계 관계가 악화된다.",
            },
          ],
          "summary": "투자 조건 미달 또는 누적 압박으로 투자사가 운영 방침 변경을 요구한다.",
          "title": "투자사 경영 개입",
          "trigger": {
            "description": "투자사 압박 활성",
            "entityIds": [],
            "kind": "investor",
            "severity": "critical",
          },
        },
      ],
      "weeklyFlow": {
        "activeEventIndex": 0,
        "eventQueueIds": [],
        "report": null,
        "resolutionId": null,
        "selectedDecisionIds": {},
        "state": "planning_ready",
      },
    },
    "staff": {
      "staff": [
        {
          "ability": 60,
          "id": "staff-manager",
          "name": "김매니저",
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 22,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 51.92,
            "dance": 51.92,
            "mental": 80,
            "stamina": 81.92,
            "visual": 51.92,
            "vocal": 53.072,
          },
          "stress": 11.8,
          "subPosition": null,
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": null,
    "competitorComebacks": [],
    "conflicts": [],
    "deltas": [
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w13-0",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w13-1",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 스트레스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w13-2",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 비주얼",
        },
      },
      {
        "after": 53.072,
        "before": 50,
        "day": 3,
        "id": "y1-w13-3",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 보컬",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w13-4",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 댄스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w13-5",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 매력",
        },
      },
      {
        "after": 81.92,
        "before": 80,
        "day": 3,
        "id": "y1-w13-6",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 체력",
        },
      },
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w13-7",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w13-8",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 스트레스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w13-9",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 비주얼",
        },
      },
      {
        "after": 53.072,
        "before": 50,
        "day": 3,
        "id": "y1-w13-10",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 보컬",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w13-11",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 댄스",
        },
      },
      {
        "after": 51.92,
        "before": 50,
        "day": 3,
        "id": "y1-w13-12",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 매력",
        },
      },
      {
        "after": 81.92,
        "before": 80,
        "day": 3,
        "id": "y1-w13-13",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 체력",
        },
      },
      {
        "after": 22,
        "before": 20,
        "day": 4,
        "id": "y1-w13-14",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t2",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 케미",
        },
      },
      {
        "after": 22,
        "before": 20,
        "day": 4,
        "id": "y1-w13-15",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t1",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 케미",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w13-16",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 만족도",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w13-17",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 만족도",
        },
      },
      {
        "after": 999053846,
        "before": 1000000000,
        "day": 6,
        "id": "y1-w13-18",
        "severity": "info",
        "source": {
          "id": "weekly-finance",
          "kind": "finance",
          "label": "주간 결산",
        },
        "target": {
          "field": "money",
          "id": null,
          "kind": "finance",
          "label": "자금",
        },
      },
      {
        "after": 8,
        "before": 10,
        "day": 6,
        "id": "y1-w13-19",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "public",
          "id": null,
          "kind": "fandom",
          "label": "대중 인지도",
        },
      },
      {
        "after": 14,
        "before": 13,
        "day": 7,
        "id": "y1-w13-20",
        "severity": "info",
        "source": {
          "id": "advance-week",
          "kind": "calendar",
          "label": "주간 진행",
        },
        "target": {
          "field": "currentWeek",
          "id": null,
          "kind": "game",
          "label": "현재 주차",
        },
      },
    ],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "방송과 숏폼 노출 경쟁이 예상보다 빨라질 것으로 보인다.",
        "headline": "대형 기획사 루키 그룹, 다음 달 데뷔 예고",
        "id": "news-w13-0",
        "type": "competitor",
        "week": 13,
      },
    ],
    "promotionResults": [],
    "season": "spring",
    "statChanges": [
      "트레이니-t1 컨디션: 80 → 79.46 (주간 훈련)",
      "트레이니-t1 스트레스: 10 → 11.8 (주간 훈련)",
      "트레이니-t1 비주얼: 50 → 51.92 (주간 훈련)",
      "트레이니-t1 보컬: 50 → 53.072 (주간 훈련)",
      "트레이니-t1 댄스: 50 → 51.92 (주간 훈련)",
      "트레이니-t1 매력: 50 → 51.92 (주간 훈련)",
      "트레이니-t1 체력: 80 → 81.92 (주간 훈련)",
      "트레이니-t2 컨디션: 80 → 79.46 (주간 훈련)",
      "트레이니-t2 스트레스: 10 → 11.8 (주간 훈련)",
      "트레이니-t2 비주얼: 50 → 51.92 (주간 훈련)",
      "트레이니-t2 보컬: 50 → 53.072 (주간 훈련)",
      "트레이니-t2 댄스: 50 → 51.92 (주간 훈련)",
      "트레이니-t2 매력: 50 → 51.92 (주간 훈련)",
      "트레이니-t2 체력: 80 → 81.92 (주간 훈련)",
      "트레이니-t1 만족도: 70 → 69 (멤버 만족도)",
      "트레이니-t2 만족도: 70 → 69 (멤버 만족도)",
    ],
    "warnings": [
      "투자사 조건 미달: 분기마다 수익 보고서 제출 및 흑자 전환 경향 증명 — 4주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
    ],
    "week": 13,
  },
}
`;
